--- a/www/index.html
+++ b/www/index.html
@@ -31,12 +31,14 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/services/optionService.js"></script>
+    <script src="js/controller/optionController.js"></script>
   </head>
   <body ng-app="starter">
 
-    <ion-pane>
+    <ion-pane ng-controller="optionController">
       <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
+
       </ion-header-bar>
       <ion-content>
       </ion-content>
